--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf ./lib",
     "prebuild": "npm run clean && npm run lint",
     "build:script": "babel ./src/index.jsx --out-file ./lib/index.js",
-    "build:style": "mkdir ./lib && cp ./src/*.less ./lib",
+    "build:style": "mkdirp ./lib && cp ./src/*.less ./lib",
     "build": "npm run test && npm run build:style && npm run build:script",
     "test": "mocha ./test/**/*.test.js"
   },
@@ -22,12 +22,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "classnames": "^2.2.5",
     "eslint": "^3.19.0",
     "eslint-config-wox": "*",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "less": "^2.7.2",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.4.2",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
