--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wox-admin-edit",
+  "name": "wox-admin-editor",
   "version": "0.1.0",
   "description": "basic react component",
   "main": "lib/index.js",
