--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wox-admin-edit",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "basic react component",
   "main": "lib/index.js",
   "scripts": {
@@ -34,6 +34,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-quill": "^1.1.0",
     "rimraf": "^2.6.1"
   },
   "peerDependencies": {
@@ -44,5 +45,6 @@
     "react-dom": "^15.5.4"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {}
 }
