--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wox-admin-editor",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "basic react component",
   "main": "lib/index.js",
   "scripts": {
@@ -48,6 +48,5 @@
     "react-dom": "^15.5.4"
   },
   "author": "",
-  "license": "MIT",
-  "dependencies": {}
+  "license": "MIT"
 }
