--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wox-admin-editor",
-  "version": "0.3.5-alpha",
+  "version": "0.3.0",
   "description": "basic react component",
   "main": "lib/index.js",
   "scripts": {
