--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "draft-js": "^0.10.4",
     "draftjs-to-html": "^0.7.6",
     "html-to-draftjs": "^1.0.1",
-    "react-draft-wysiwyg": "^1.10.12",
+    "react-draft-wysiwyg": "^1.10.12"
   },
   "devDependencies": {
     "antd": "^2.10.4",
