--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wox-admin-editor",
-  "version": "0.2.5",
+  "version": "0.4.0",
   "description": "basic react component",
   "main": "lib/index.js",
   "scripts": {
@@ -17,10 +17,7 @@
     "component"
   ],
   "dependencies": {
-    "draft-js": "^0.10.4",
-    "draftjs-to-html": "^0.7.6",
-    "html-to-draftjs": "^1.0.1",
-    "react-draft-wysiwyg": "^1.10.12"
+    "react-quill": "^1.1.0"
   },
   "devDependencies": {
     "antd": "^2.10.4",
